Change path to relative

--- a/scripts/parameters_control_theory.cfg
+++ b/scripts/parameters_control_theory.cfg
@@ -4,7 +4,7 @@ dataset_path='/ems/elsc-labs/avitan-l/Lab-Shared/Data/FeedingAssay2020/'
 size='10000'
 
 # these parameters can be passed to the other two scripts, just note the path slightly changed
-repository_relative_to_script_path='../../ZebrafishBehaviorTracking/'
+repository_relative_to_script_path='../'
 opencv_conda_env='opencv_contrib_for_behavior'
 
 # for input folders (match main prefix)
