--- a/scripts/parameters_feeding_assay_control.cfg
+++ b/scripts/parameters_feeding_assay_control.cfg
@@ -1,8 +1,8 @@
 dataset_path='/ems/elsc-labs/avitan-l/Lab-Shared/Data/FeedingAssay2020/'
 
 # these parameters can be passed to the other two scripts, just note the path slightly changed
-repository_relative_to_script_path=../ZebrafishBehaviorTracking/
-opencv_conda_env=opencv_contrib_for_behavior
+repository_relative_to_script_path='../'
+opencv_conda_env='opencv_contrib_for_behavior'
 
 # for input folders (match main prefix)
 pref='control_'  
